more font fixes on mobile

--- a/styles.css
+++ b/styles.css
@@ -480,7 +480,6 @@ body {
         overflow: hidden;
     }
 
-
     body {
         font-size: 12px;
     }
@@ -513,6 +512,7 @@ body {
     }
     .ybile-r2 {
         max-width: 300px;
+        font-size: 3.5em;
     }
 
     .ybile-r3 {
@@ -549,6 +549,7 @@ body {
     }
     .ybile-r2 {
         max-width: 300px;
+        font-size: 3.5em;
     }
     .ybile-r3 {
         letter-spacing: 4.5px;
@@ -571,6 +572,7 @@ body {
     }
     .ybile-r2 {
         max-width: 300px;
+        font-size: 3.5em;
     }
     .ybile-r3 {
         letter-spacing: 4.5px;
